# MusicPlayer

./: CMakeLists.txt  MusicPlayer.cpp  MusicPlayer.h  README.md  main.cpp  strmiids.lib
